--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 			<version>1.7</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.github.jitpack</groupId>
+			<artifactId>maven-modular</artifactId>
+			<version>1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
