--- a/pom.xml
+++ b/pom.xml
@@ -67,5 +67,16 @@
 			</resource>
 		</resources>
 	</build>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>maven-snapshots</id>
+			<url>https://repository.apache.org/content/repositories/snapshots/</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>maven-shade-plugin</id>
+			<url>https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin</url>
+		</pluginRepository>
+	</pluginRepositories>
   
 </project>
