--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,6 @@
 			<id>codemc-releases</id>
 			<url>https://repo.codemc.io/repository/maven-public/</url>
 		</repository>
-		<repository>
-			<id>jitpack.io</id>
-			<url>https://jitpack.io</url>
-		</repository>
-
 	</repositories>
 
 	<dependencies>
@@ -36,11 +31,6 @@
 			<artifactId>VaultAPI</artifactId>
 			<version>1.7</version>
 			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.github.jitpack</groupId>
-			<artifactId>maven-modular</artifactId>
-			<version>1.1</version>
 		</dependency>
 
 		<dependency>
@@ -72,6 +62,19 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-plugin-plugin</artifactId>
+				<version>3.6.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>descriptor</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 
 		<resources>
@@ -84,16 +87,5 @@
 			</resource>
 		</resources>
 	</build>
-
-	<pluginRepositories>
-		<pluginRepository>
-			<id>maven-snapshots</id>
-			<url>https://repository.apache.org/content/repositories/snapshots/</url>
-		</pluginRepository>
-		<pluginRepository>
-			<id>maven-shade-plugin</id>
-			<url>https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-shade-plugin</url>
-		</pluginRepository>
-	</pluginRepositories>
   
 </project>
