--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,10 @@
   <artifactId>CraftQEconomy</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
-  <properties>
+  	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
 	</properties>
 
 	<repositories>
